fixed spacing for nav bar

--- a/css/shared.css
+++ b/css/shared.css
@@ -81,7 +81,7 @@ nav{
     
 }
 .navlink{
-    padding: 5px;
+    padding: 16px;
     font-size: 2em;
     display: block;
 }
